crates/plotnik-tests/tests/02-parser/recovery_validation/bang_negation_quantified.txt
Q = (pair !key*)
------------------ DIAGNOSTICS -------------------
warning: `!field` negation is deprecated
 --> query.ptk:1:11
  |
1 | Q = (pair !key*)
  |           ^
  |
help: use `-`
  |
1 - Q = (pair !key*)
1 + Q = (pair -key*)
  |

error: negated grammar fields cannot be quantified
 --> query.ptk:1:15
  |
1 | Q = (pair !key*)
  |               ^
  |
help: remove the quantifier
  |
1 - Q = (pair !key*)
1 + Q = (pair !key)
  |
help: a negated grammar field asserts absence and produces no value
